fix load match AI